Update my portfolio at english

--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfil Profecional</title>
+    <title>About Me</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./sass/base.css">
@@ -16,38 +16,37 @@
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="./index.html">Inicio</a>
+                    <a class="nav-link" href="./index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./proyectos.html">Proyectos</a>
+                    <a class="nav-link" href="./proyectos.html">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./aboutme.html">Sobre Mi</a>
+                    <a class="nav-link" href="./aboutme.html">About Me</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./hobie.html">Pasatiempos</a>
+                    <a class="nav-link" href="./hobie.html">Hoobbies</a>
                 </li>
             </ul>
         </nav>
-
     </header>
 
     <main>
         <section class="text_about">
             <div>
-                <h1>¿Quién soy?</h1>
+                <h1>Who am i?</h1>
 
-                <p>Hola me llamo David Ricardo Cruz Juárez, orgullosamente Oaxaqueño, tengo 25 años, Ingeniero Mecatrónico
+                <p>Hello, my name is David Ricardo Cruz Juárez, proudly from Oaxaca, I am 27 years old, a Mechatronics Engineer  </p>
+
+                <h2>Professional Area</h2>
+                <p>
+                    I graduated in July 2021, from the Technological University of La Mixteca, in the Area of Mechatronics Engineering.
                 </p>
 
-                <h2>Área Profesional</h2>
                 <p>
-                    Me gradué en Julio del año 2021, de la Universidad Tecnológica de la Mixteca, en Área de Ingeniería en Mecatrónica.
-                </p>
-
-                <p>
-                    Durante mi estancia en esta carrera realice diferentes proyectos, que se encuentran en esta misma página, estos,
-                    tratan de juntar todos los cursos, desde creación de aplicaciones, control de sistemas embebidos y robóticos, e incluso, clustering y machine learning con fundamentos de inteligencia artificial.
+                    During my time in this career, I carried out different projects, which are found on this same page, these,
+                    try to bring together all the courses, from application creation, control of embedded and robotic systems, 
+                    and even clustering and machine learning with fundamentals of artificial intelligence.
                 </p>
             </div>
 
@@ -57,12 +56,13 @@
             </div>
 
             <div>
-                <h2>Estudios Posteriores</h2>
+                <h2>Further study</h2>
                 <p>
-                    Adentrándome en el mundo de Cyber Seguridad de los sistemas embebidos decidí cursar este diplomado
-                    acreditado por la ITESO, Universidad Jesuita de Guadalajara Este diplomado tuvo una duración de 6 meses
-                    donde aplicamos diferentes conceptos y obteniendo conocimiento en: Introducción a la Seguridad / Criptografía / Herramientas de Seguridad Perimetal
-                     Desarrollo Seguro para Embebidos / Gestión de la Seguridad / Validación de Seguridad Hackeo Ético.
+                    Entering the world of Cyber ​​Security for embedded systems, I decided to take this diploma course accredited by ITESO,
+                    the Jesuit University of Guadalajara.
+                    This diploma course lasted 6 months where we applied different concepts and gained knowledge in: 
+                    Introduction to Security / Cryptography / Perimeter Security Tools / Secure Development for Embedded Systems / 
+                    Security Management / Security Validation Ethical Hacking.
                 </p>
             </div>
 
@@ -98,7 +98,7 @@
 
        <section class="emtech">
             <div>
-            <h2>Entrenamiento Full Stack Developer</h2>
+            <h2>Full Stack Developer Training</h2>
             </div>
             
             <div class="container_curso">
@@ -159,22 +159,23 @@
             </div>
             
             <div>
-                <P>En octubre de 2022, se lanzó el Programa "Transformación Digital para Jóvenes", por parte del Gobierno de Puebla y la Secretaria de Economía del Estado de Puebla y junto a EMTECH INSTITUTE,
-                    con una postulación al programa de más de 1000 personas, gracias a que me esfuerzo, soy perseverante y apasionado por la tecnología, logre aprobar y destacar en las 3 faces del programa.
+                <P>In October 2022, the "Digital Transformation for Youth" Program was launched by the Government of Puebla and the Secretary of
+                    Economy of the State of Puebla and together with EMTECH INSTITUTE, with more than 1,000 people applying to the program. 
+                    Thanks to my hard work, perseverance and passion for technology, I managed to pass and excel in the 3 phases of the program.
                 </p>
                 <p>
-                    Concluí y recibí mi certificado en la ceremonia de clausura el día 6 de marzo de 2023 de la mano de Olivia Salomón.
-                    Este curso me brindo conocimiento y habilidades en: </p>
+                    I completed and received my certificate at the closing ceremony on March 6, 2023 from Olivia Salomón.
+                    This course provided me with knowledge and skills in:</p>
                 <div class="bullet">
                     <p class="fw-bold">Front-end y Back-end</p>
-                    <p class="fw-bold">Control de Versiones de Software Git & Git-Hub</p>
-                    <p class="fw-bold">Metodlogia Agile Marco Scrum</p>
-                    <p class="fw-bold">Introducción a las Tecnologias Emergentes</p>
+                    <p class="fw-bold">Version Control Software Git & Git-Hub</p>
+                    <p class="fw-bold">Metodology Agile Framework Scrum</p>
+                    <p class="fw-bold">Introduction to Emerging Technologies</p>
                 </div>
             </div>
 
             <div>
-                <p>Obteniendo las siguientes constancias:</p>
+                <p>Obtaining the following evidence:</p>
             </div>
 
             <div class="container_curso">
@@ -216,11 +217,11 @@
 
         <section class="cisco">
             <div>
-                <h2>Certificaciones y Cursos CISCO</h2>
+                <h2>CISCO Certifications and Courses</h2>
 
                 <p>
-                    Adentrándome en el mundo de Linux y la Cyber Seguridad decidí cursar los bootcamps de Cisco Network Academy
-                    donde concluí el de linux Essentials con duración de 70 hrs, y además en proceso de concluir el curso de Cyber Seguridad de 160 horas.
+                    Entering the world of Linux and Cyber ​​Security, I decided to take the Cisco Network Academy bootcamps
+                    where I completed the 70-hour Linux Essentials course, and I am also in the process of completing the 160-hour Cyber Security course.
                 </p>
             </div>
 
@@ -256,12 +257,12 @@
 
         <section class="L_Learning">
             <div>
-                <h2>Cruso con Linkedin Learnig</h2>
+                <h2>Course with Linkedin Learning</h2>
 
                 <p>
-                    Para reforzar mis conocimientos, estoy tomando unos cursos de especialización en diferentes 
-                    ámbitos, tanto de: Programación y gestión de proyectos con la plataforma de LinkedIn Learning, alguno del curso, que ya acabé y tengo en progreso son:
-
+                    To reinforce my knowledge, I am taking some specialization courses in different areas, both in: 
+                    Programming and project management with the LinkedIn Learning platform, some of the courses, which
+                     I have already finished and have in progress, are:
                 </p>
             </div>
             <div class="learning_carru">
@@ -296,9 +297,11 @@
 
         <section class="slim">
             <div>
-                <h2>Diplomados con Fundación Slim</h2>
-                <p>Porque me fascina el mundo de la tecnología, me sigo preparando y actualizando en el mundo de la industria 4.0 y en la actualidad, estoy cursando un diplomado con "Fundación Slim,
-                     Capacítate para el empleo" en: IOT (Internet de las Cosas), que envuelve diferentes cursos, estas son algunas de las certificaciones que he obtenido hasta el momento:
+                <h2>Diplomas with Slim Foundation</h2>
+                <p>
+                    Because I am fascinated by the world of technology, I continue to prepare and update myself in the world of industry 4.0 and currently, 
+                    I am taking a diploma with "Fundación Slim,Train yourself for employment" in: IOT (Internet of Things),
+                    which involves different courses, these are some of the certifications I have obtained so far:
                 </p>
             </div>
 
@@ -350,7 +353,7 @@
     <footer class="fote">
         <section>
           <div>
-            <h3 class="text-center">Contactame</h3>
+            <h3 class="text-center">Contact Me</h3>
           </div>
           <section class="grid_contener_social">
             <div item="6"></div>
