--- a/hobie.html
+++ b/hobie.html
@@ -15,29 +15,29 @@
   <header>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
       <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="./index.html">Inicio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./proyectos.html">Proyectos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./aboutme.html">Sobre Mi</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./hobie.html">Pasatiempos</a>
-        </li>
+          <li class="nav-item active">
+              <a class="nav-link" href="./index.html">Home</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="./proyectos.html">Projects</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="./aboutme.html">About Me</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="./hobie.html">Hoobbies</a>
+          </li>
       </ul>
-    </nav>
+  </nav>
   </header>
   <main id="hobies">
 
     <section class="Personal">
       <div>
-        <h1>Mis Pasa tiempos</h2>
+        <h1>My Hobbies</h2>
 
-          <h2>Video Juegos</h3>
-            <p>Me he divertido jugando diferentes títulos y diferentes Sagas, algunos de mis juegos favoritos de PC, X-Box, y Móvil. </p>
+          <h2>Video games</h3>
+            <p>I've had fun playing different titles and different Sagas, some of my favorite games from PC, X-Box, and Mobile. </p>
       </div>
       <div class="container text-center">
         <div class="row">
@@ -140,8 +140,8 @@
 
     <section class="Series">
       <div>
-        <h2>Series o Peliculas</h2>
-        <p>He visto muchas películas y series, pero mis favoritas están relacionadas con videojuegos o con tecnología o comedia, algunas de ellas son las que veras a continuación.
+        <h2>Series or Movies</h2>
+        <p>I have seen many movies and series, but my favorites are related to video games or technology or comedy, some of them are the ones you will see below.
         </p>
       </div>
       <div class="movies">
@@ -194,11 +194,11 @@
 
     <section class="Hamburguesa">
       <div>
-        <h2>En busqueda de la Hamburguesa Perfecta</h2>
+        <h2>In search of the perfect burger</h2>
 
-        <p>Me encanta salir por la tarde un fin de semana o después de un largo día de trabajo
-          ir a un restaurante y pedir la hamburguesa de la casa o pedir la más grande, porque me gusta
-          catar hamburguesas, Soy Catador de Hamburguesa XD, una cerveza bien fría para acompañar también me encanta la cerveza artesanal e importada.
+        <p>I love going out in the afternoon on a weekend or after a long day at work
+          going to a restaurant and ordering the house burger or ordering the biggest one, because I like
+          tasting burgers, I am a Burger Taster XD, a nice cold beer to accompany it, I also love craft and imported beer.
 
         </p>
       </div>
@@ -247,7 +247,7 @@
   <footer class="fote">
     <section>
       <div>
-        <h3 class="text-center">Contactame</h3>
+        <h3 class="text-center">Contact Me</h3>
       </div>
       <section class="grid_contener_social">
         <div item="6"></div>
