--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="./index.html">Inicio</a>
+                    <a class="nav-link" href="./index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./proyectos.html">Proyectos</a>
+                    <a class="nav-link" href="./proyectos.html">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./aboutme.html">Sobre Mi</a>
+                    <a class="nav-link" href="./aboutme.html">About Me</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./hobie.html">Pasatiempos</a>
+                    <a class="nav-link" href="./hobie.html">Hoobbies</a>
                 </li>
             </ul>
         </nav>
@@ -44,8 +44,7 @@
                     <img src="./image/perfil/face2.jpg" id="logo_dave" alt="fotoperfil">
                 </div>
                 <div>
-                    <h3>Ingeniero mecatrónico, con interés en Desarrollo de Software, Sistemas Embebidos,
-                        Internet de las Cosas, Machine Learning, Inteligencia Artificial.
+                    <h3>Mechatronics engineer, with interest in Embedded Systems, Web Development, CiberSecurity, Cloud and Machine Learning, Artificial Intelligence.
                     </h3>
                 </div>
             </section>
@@ -54,12 +53,12 @@
 
         <section>
             <div>   
-                <h2>Conocimientos Técnicos</h2>
+                <h2>Technical Knowledge</h2>
             </div>
         </section>
 
         <section class="lenguaje_progra">
-            <h2 id="Lenguajes">Lenguajes de Programación</h2>
+            <h2 id="Lenguajes">Programming Languages</h2>
             <section class="grid_contener">
                 <div item="item1">
                     <h3>C</h3>
@@ -94,7 +93,7 @@
 
         <section class="ide_sw">
             <div>
-                <h2 id="software2">Manejo de Software IDE, orientado a Desarrollo de Software</h2>
+                <h2 id="software2">IDE Software Management, focused on Web Software Development</h2>
             </div>
             <section class="grid_contener_2">
                 <div item="item1">
@@ -127,8 +126,7 @@
 
         <section class="micro">
             <div>
-                <h2 id="software3">Manejo de Software orientado a Circuitos Reconfigurables Microcontroladores, FPGA
-                </h2>
+                <h2 id="software3">Software with a focus on Reconfigurable Circuits (Microcontrollers, FPGA, DSP) </h2>
             </div>
             <section class="grid_contener_3">
                 <div item="item1">
@@ -161,7 +159,7 @@
 
         <section class="cad">
             <div>
-                <h2 id="software4">Manejo de Software Orientado a Diseño CAD</h2>
+                <h2 id="software4">CAD Design Software</h2>
             </div>
             <section class="grid_contener_4">
                 <div item="item1">
@@ -193,7 +191,7 @@
 
         <section class="simulation">
             <div>
-                <h2 id="software5">Manejo de Software orientado a Simulación Robótica Móvil</h2>
+                <h2 id="software5">Software for Mobile Robotics Simulation</h2>
             </div>
             <section class="grid_contener_5">
                 <div item="item1">
@@ -224,7 +222,7 @@
 
         <section class="automotriz">
             <div>
-                <h2 id="software6">Manejo de Software orientado a Sector Automotriz</h2>
+                <h2 id="software6">Software with a focus on the Automotive Sector</h2>
             </div>
             <section class="grid_contener_6">
                 <div item="item1">
@@ -257,7 +255,7 @@
     <footer class="fote">
         <section>
           <div>
-            <h3 class="text-center">Contactame</h3>
+            <h3 class="text-center">Contact Me</h3>
           </div>
           <section class="grid_contener_social">
             <div item="6"></div>
