--- a/proyectos.html
+++ b/proyectos.html
@@ -16,16 +16,16 @@
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="./index.html">Inicio</a>
+                    <a class="nav-link" href="./index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./proyectos.html">Proyectos</a>
+                    <a class="nav-link" href="./proyectos.html">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./aboutme.html">Sobre Mi</a>
+                    <a class="nav-link" href="./aboutme.html">About Me</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./hobie.html">Pasatiempos</a>
+                    <a class="nav-link" href="./hobie.html">Hoobbies</a>
                 </li>
             </ul>
         </nav>
@@ -34,15 +34,27 @@
     <main id="proycts">
         <section>
             <div>
-                <h1>Portafolio</h1>
-                <h2>Algunos de estos proyectos estan en mi Repositorio de Git Hub, presiona el icono al final de la
-                    pagina</h2>
+                <h1>Portfolio</h1>
+                <h2>Some of these projects are in my Git Hub Repository, press the icon at the bottom of the page</h2>
             </div>
         </section>
 
-        <section>
+        <section class="DCU">
             <div>
-                <h2>Desarrollo de DCU Door Control Module CTEP 2323</h2>
+                <h2>Development of DCU Door Control Module CTEP 2023</h2>
+                <p>CTEP (Continental Talent Entry Program):
+                    Development of DCU applying V-Cycle, ASPICE, Software Development Life Cycle, using Scrum and Kanban frameworks.
+                    <br>
+                    Classified functional and non-functional requirements using IBM DOORS.
+                    <br>
+                    Developed and modeled the requirements architecture in IBM Rhapsody.
+                    <br>
+                    Designed and developed software architecture using Autosar Builder and EB Tresos.
+                    <br>
+                    Created test cases for unit testing, integration testing, and system testing using IBM DOORS.
+                    <br>
+                    Git and GitHub for version control and collaboration.
+                </p>
             </div>
             <div class="contener_carrusel">
                 <div id="carouselExampleIndicators" class="carousel slide">
@@ -84,10 +96,22 @@
         </section>
 
 
-        <section>
+        <section class="DCU">
             <div>
-                <h2>Desarrollo de App Cuida+, Mediante metodologia Agile en el Marco Scrum</h2>
+                <h2>Development of Cuida+ App, implementing Agile methodology "Scrum Framework"</h2>                           
+                <p>
+                    <br>
+                    Applying best practices in project management considering the Iron Triangle (Time, Cost and Scope).
+                    <br>
+                    Functional and Non-Functional Requirements Analysis.
+                    <br>
+                    Assignment of roles and responsibilities with the Kanban board.
+                    <br>
+                    Project Development under Agile methodologies implemented Scrum Framework with 3 Roles (Product Owner, Scrum Master, Developers) 
+                    and 5 Events (Sprint, Daily Schedule, Sprint Planning, Sprint Review and Sprint Retrospective, ) and 3 Artifacts (Product Backlog, Sprint Backlog, Product Increment, )
+                </p>
             </div>
+
             <div class="container">
                 <embed src="./image/Scrum/CRUZJUAREZDAVIDRICARDO_GRUPO2_METODOLOGIASAGILES_PORTAFOLIO.pdf"
                     type="application/pdf" width="100%" height="850px" />
@@ -95,30 +119,56 @@
         </section>
 
 
-        <section>
+        <section class="DCU">
             <div>
-                <h2>Desarrollo de Ecommerce con HTML, CSS, SASS, Java Script y Diseño Responsivo</h2>
+                <h2>Fashion Cat Ecommerce Development Implemented Front End and BackEnd and UX</h2>
+                <p>
+                    Fashion Cat Ecommerce Development Implemented Front End and BackEnd and UX
+                    <br>
+                    Technologies Used:
+                    <br>
+                    HTML & CSS/SASS: For a solid structure and custom styles that highlight the essence of the store.
+                    <br>
+                    Node.js: Efficient management of the backend and services.
+                    <br>
+                    Bootstrap: Fast and elegant components to improve the appearance and accessibility of the site.
+                    <br>
+                    JavaScript: For dynamic and interactive functionalities that enrich the user experience.
+                    <br>
+                    UX: Responsive Design Low and high fidelity diagrams using Figma
+                </p>
             </div>
             <div>
                 <a class="btn_center" href="https://davidrcj.github.io/ecommerce-SASS/" alt="Link Ecomerce"><img
                         src="./image/Ecoomerce/eco_cat.png" id="eco_sass" class="rounded mx-auto d-block"
                         alt="Link Eccomerce"></a>
-                <h3>Presiona la imagen para ir al enlace del eccomerce</h3>
+                <h3>Click on the image to go to the e-commerce link</h3>
             </div>
 
         </section>
 
 
-        <section>
+        <section class="DCU">
             <div>
-                <h2>Diseño y Simulacion de un robot omnidireccional en el entorno de Webots</h2>
+                <h2>Design and Simulation of an omnidirectional robot in the Webots environment</h2>
+                <p>The following work shows the process
+                    carried out to simulate a 4-wheeled omnidirectional robot
+                    Mecanum in the Webots environment. At this point the robot Astérix
+                    is not able to follow a control path, however,
+                    this does not mean that the working paradigm is wrong,
+                    but that deep knowledge about a simulation environment is really important. We compare 2 paradigms
+                    of implementing movement and control relationships, and
+                    we analyze the results of each one of them. Finally,
+                    to check that the path control is completely functional, it is applied to the example model youBot from the
+                    company KUKA available in the Webots documentation.</p>
             </div>
-            ` <div>
+
+            <div>
                 <img id="img_one" src="./image/Weboots/Diseño sin título (1).png" class="rounded mx-auto d-block"
                     alt="Renderizado Robot Axterix">
             </div>
             <div>
-                <h3>Investigacion y desarrollado en PDF</h3>
+                <h3>Research and development documented in PDF</h3>
                 <div class="container">
                     <embed
                         src="./image/Weboots/Evaluaci_n_y_simulaci_n_de_un_robot_m_vil_omnidireccional_de_4_ruedas__Ast_rix_y_youBot_KUKA_.pdf"
@@ -127,9 +177,20 @@
             </div>
         </section>
 
-        <section>
+        <section class="DCU">
             <div>
-                <h2>Teclado con macros, desarrollado en Rasperry Pi Pico y Python</h2>
+                <h2>Keyboard with macros, developed on Raspberry Pi Pico and Python</h2>
+                <p>
+                    Online classes play an important role
+                    today in the face of the pandemic caused by the SARS Covid-19 virus,
+                    due to this, video conferencing platforms (Google Meet and Zoom Meetings) have been used,
+                    which aim to be an alternative to avoid educational lag.     
+                <br>       
+                Although the interface of the platforms is designed so that
+                classes are as fluid as possible, a device was designed
+                that allows agility in day-to-day classes, allowing
+                    the user to activate platform functions with a single key.
+                </p>
             </div>
             <div class="contener_carrusel">
                 <div id="carouselExampleIndicators" class="carousel slide">
@@ -169,7 +230,7 @@
                 </div>
             </div>
             <div>
-                <h3>Investigacion y desarrollado en PDF</h3>
+                <h3>Research and development documented in PDF</h3>
             </div>
             <div class="container">
                 <embed src="./image/rasperry/Teclado_para_clases_en_linea.pdf" type="application/pdf" width="100%"
@@ -178,26 +239,42 @@
             </div>
         </section>
 
-        <section>
+        <section class="DCU">
             <div>
-                <h2>Desarrollo de Video Juego textrix en FPGA, con modulos de VGA controlado por Puerto teclado PS2
-                    y via
-                    Bluetooth</h2>
+                <h2>Development of a textrix video game on FPGA, with VGA modules controlled by a PS2 keyboard port and via Bluetooth</h2>
+
+                <p>
+                    Main Features of the Project:
+                    <br>
+                    VGA Graphics and Text: VGA Graphics: Implementation of colorful and detailed graphics representing the Tetris game on a VGA screen, with a design optimized for clarity and performance.
+                    VGA Text: Use of on-screen text to display scores, levels, and messages in real time, with clear and stylized fonts.
+                    <br>
+                    <br>
+                    PS/2 Module: Integration of a keyboard using the PS/2 protocol to control the game pieces accurately and quickly.
+                    <br>
+                    <br>
+                    Bluetooth Interface: Development of a Bluetooth connection that allows interaction between the FPGA and a mobile device.
+                    Two-way communication that allows sending and receiving commands in real time.
+                    <br>
+                    <br>
+                    App Inventor for Remote Control: Create a custom app in App Inventor that acts as a remote control for the game.
+                    The app includes an intuitive interface to move, rotate, and manage game pieces, improving the user experience
+                </p>
             </div>
 
             <section>
                 <div>
-                    <h3>Textrix en FPGA y modulo PS2</h3>
+                    <h3>Textrix on FPGA and PS2 module</h3>
                     <a class="btn_center" href="https://youtu.be/JU6Ka7WDbFA" alt="Link Video FPGA">
-                        < <img src="./image/fpga/ps2_blue.png" id="eco_sass_2" class="rounded mx-auto d-block"
+                        < <img src="./image/fpga/FPGA Tetrix.png" id="eco_sass_2" class="rounded mx-auto d-block"
                             alt="Textix Completo">
                     </a>
-                    <h3>Presiona la imagen para ir al enlace del video en Youtube</h3>
+                    <h3>Click on the image to go to the video link on Youtube</h3>
                 </div>
             </section>
 
             <div>
-                <h3>Pdf con la investigacion</h3>
+                <h3>Documented research in PDF</h3>
             </div>
             <div class="container">
                 <embed src="./image/fpga//VGA_REPORT_EXPO.pdf" type="application/pdf" width="100%" height="800px" />
@@ -205,18 +282,47 @@
 
         </section>
 
-        <section>
-            <div>
-                <h2> Prototipo de un vehículo autónomo a escala, controlado Via Bluetooth</h2>
+        <section class="DCU">
+           <div>
+                <h2> Prototype of a Scaled Autonomous Differential Robot with Fuzzy Control, Operable via PC and Mobile Interfaces</h2>
+                <p>
+                    Project Phases:
+                    <br> <br>
+                    Requirements and Classification Phase:
+                    <br>Identification of the functional and non-functional requirements of the system.
+                    <br> Classification of necessary components: mechanical, electronic and software.
+                    <br><br>
+                    Control Simulations:
+                    <br>Differential Control: Implemented in MATLAB Simulink to adjust the behavior of the motors and ensure precise movements.
+                    <br> Fuzzy Control: Development of a model based on fuzzy logic in MATLAB Simulink to optimize autonomous and adaptive handling in various conditions.
+                    <br><br>
+                    Mechanical Design and Physical Simulation:
+                    <br>
+                    Modeling of the vehicle using SolidWorks, including the structure and mechanical systems.
+                    <br>
+                    Simulation of mechanical behavior and physics analysis to verify the stability and performance of the design.
+                    <br> <br>
+                    Electronic Design:
+                    <br>
+                    Implementation of the necessary circuits in Proteus, with emphasis on the connection and control of motors and sensors.
+                    <br>
+                    Communication tests between the electronic modules and the main control system.
+                    <br><br>
+                    Control Interface Development:
+                    <br>
+                    Manual Control: Creation of an interface in MATLAB to simulate the steering and movement of the vehicle manually.
+                    <br>
+                    Bluetooth Control: Development of a custom app in App Inventor, which allows the vehicle to be controlled from a mobile device.
+                </p>
             </div>
             <div>
                 <a class="btn_center" href="https://youtu.be/En38XkcaLVs" alt="Link a Youtube"><img
                         src="./image/integrador/robot movil.png" id="eco_sass_2" class="rounded mx-auto d-block"
                         alt="Robot Movil"></a>
-                <h3>Presiona la iamgen para ir al enlance de You Tube</h3>
+                <h3>Click on the image to go to the Youtube link</h3>
             </div>
             <div>
-                <h3>Investigacion y desarrollado en PDF</h3>
+                <h3>Research documented in PDF</h3>
                 <embed src="./image/integrador/Proyecto Automóvil-Autónomo.pdf" type="application/pdf" width="33%"
                     height="800px" />
                 <embed src="./image/integrador/Manual de usuario.pdf" type="application/pdf" width="33%"
@@ -246,7 +352,7 @@
     <footer class="fote">
         <section>
           <div>
-            <h3 class="text-center">Contactame</h3>
+            <h3 class="text-center">Contact Me</h3>
           </div>
           <section class="grid_contener_social">
             <div item="6"></div>
